changed bootstrap css and added hidden

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ main {
   padding-top: 1rem;
 }
 
-.game-row {}
+#gameCards {}
 
 .card {
   /* background-image: url("../images/lfz-card.jpg"); */
@@ -30,8 +30,8 @@ main {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  flex-basis: auto;
-  /* position: relative; */
+  flex-basis: 15%;
+  position: relative;
   margin: 0 auto .5rem;
 }
 
@@ -41,15 +41,48 @@ main {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  flex-basis: auto;
+  flex-basis: 15%;
+  position: absolute;
 }
 
 .card-back {
   background-image: url('../images/lfz-card.jpg')
 }
 
+.css-logo {
+  background-image: url('../images/css-logo.png');
+}
+
+.docker-logo {
+  background-image: url('../images/docker-logo.jpg');
+}
+
+.gitHub-logo {
+  background-image: url('../images/gitHub-logo.png');
+}
+
+.html-logo {
+  background-image: url('../images/html-logo.png');
+}
+
 .js-logo {
-  background-image: url('../assets/images/js-logo.png');
+  background-image: url('../images/js-logo.png');
+}
+
+.mysql-logo {
+  background-image: url('../images/mysql-logo.jpg');
+}
+
+.node-logo {
+  background-image: url('../images/node-logo.png');
+}
+
+.php-logo {
+  background-image: url('../images/php-logo.jpeg');
+}
+
+.react-logo {
+  background-image: url('../images/react-logo.png');
 }
 
 /* Stats Information */
@@ -77,3 +110,7 @@ aside>div {
 .accuracy {}
 
 .num3 {}
+
+.hidden {
+  display: none;
+}
