--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ main {
 #gameCards {}
 
 .card {
-  /* background-image: url("../images/lfz-card.jpg"); */
+  background-image: url("../images/lfz-card.jpg");
   height: 26vh;
   background-size: cover;
   background-repeat: no-repeat;
