--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,8 @@ header {
 
 aside {
   padding-right: 10px;
+  text-align: center;
+  position: relative;
 }
 
 main {
@@ -112,6 +114,10 @@ aside>div {
   font-size: larger;
   padding: 50px;
 }
+
+
+
+/* ------------------------------ */
 
 .hidden {
   display: none;
