--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,31 @@ aside>div {
   padding: 50px;
 }
 
+#resetButton {
+  color: rgb(255, 255, 255);
+  font-size: 16px;
+  line-height: 16px;
+  padding: 6px;
+  border-radius: 10px;
+  font-family: Georgia, serif;
+  font-weight: normal;
+  text-decoration: none;
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
+  background-image: linear-gradient(to right, rgb(28, 110, 164) 0%, rgb(35, 136, 203) 50%, rgb(20, 78, 117) 100%);
+  box-shadow: rgb(0, 0, 0) 5px 5px 15px 5px;
+  border: 2px solid rgb(28, 110, 164);
+  display: inline-block;
+}
 
+#resetButton:hover {
+  background: #1C6EA4;
+}
+
+#resetButton:active {
+  background: #144E75;
+}
 
 /* ------------------------------ */
 
