--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,15 @@
 body {
-  background-image: url("../images/lfz-background.jpg");
+  background-image: url("../images/logo/blue-universe-956981.jpg");
   height: 97vh;
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
 }
 
 header {
   width: 100%;
   text-align: center;
   font-size: 18px;
+  color: white;
 }
 
 aside {
@@ -25,8 +26,9 @@ main {
 }
 
 .card {
-  background-image: url("../images/lfz-card.jpg");
-  height: 26vh;
+  /* background-image: url("../images/lfz-card.jpg"); */
+  background-color: black;
+  height: 28vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -35,7 +37,17 @@ main {
   margin: 0 auto .5rem;
 }
 
-.card-front, .card-back {
+.card-front {
+  height: 100%;
+  width: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  flex-basis: 15%;
+  position: absolute;
+}
+
+.card-back {
   height: 100%;
   width: 100%;
   background-size: cover;
@@ -50,39 +62,39 @@ main {
 }
 
 .css-logo {
-  background-image: url('../images/css-logo.png');
+  background-image: url('../images/logo/netflix.png');
 }
 
 .docker-logo {
-  background-image: url('../images/docker-logo.jpg');
+  background-image: url('../images/logo/disney_plus.png');
 }
 
 .gitHub-logo {
-  background-image: url('../images/gitHub-logo.png');
+  background-image: url('../images/logo/hbo_now.jfif');
 }
 
 .html-logo {
-  background-image: url('../images/html-logo.png');
+  background-image: url('../images/logo/amazon_prime.jpg');
 }
 
 .js-logo {
-  background-image: url('../images/js-logo.png');
+  background-image: url('../images/logo/hulu.jpg');
 }
 
 .mysql-logo {
-  background-image: url('../images/mysql-logo.jpg');
+  background-image: url('../images/logo/thanos.jpg');
 }
 
 .node-logo {
-  background-image: url('../images/node-logo.png');
+  background-image: url('../images/logo/youTube_red.jpg');
 }
 
 .php-logo {
-  background-image: url('../images/php-logo.jpeg');
+  background-image: url('../images/logo/cbs.jpg');
 }
 
 .react-logo {
-  background-image: url('../images/react-logo.png');
+  background-image: url('../images/logo/animation.jpg');
 }
 
 /* Stats Information */
@@ -91,10 +103,12 @@ aside>div {
   margin: 1rem;
   width: 90%;
   height: 10vh;
-  background-color: rgb(135, 206, 235);
+  background-color:black;
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 5px;
+  color: white;
 }
 
 .modal-overlay {
