--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ body {
   height: 97vh;
   background-size: cover;
   background-repeat: repeat;
+  font-family: "Lucida Console", Monaco, monospace;
 }
 
 header {
