--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,9 +26,8 @@ main {
 }
 
 .card {
-  /* background-image: url("../images/logo/blue-universe-956981.jpg"); */
-  background-color: black;
-  /* height: 28vh; */
+  background-image: none;
+  height: 28vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -51,6 +50,7 @@ main {
   background-image: url('../images/star-wars/card-back02.jpg');
   height: 100%;
   width: 100%;
+  height: 28vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
