--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ main {
 
 .card-back {
   background-image: url('../images/star-wars/card-back02.jpg');
-  opacity: 0.15;
+  /* opacity: 0.15; */
   height: 100%;
   width: 100%;
   height: 28vh;
@@ -228,7 +228,7 @@ aside>div {
   text-align: center;
   background-color: rgb(58, 175, 246);
   width: 25%;
-  font-size: 2vw;
+  font-size: larger;
   padding: 50px;
 }
 
@@ -346,5 +346,8 @@ aside>div {
   aside>div {
     background: none;
     width: 45%;
+  }
+  img{
+    width: 100%;
   }
 }
